// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar snapshots multiple progress 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F7F8",
      "borderColor": "#F7F7F8",
      "flexDirection": "row",
      "height": 12,
      "overflow": "hidden",
      "padding": 2,
    }
  }
  testID="container-multiple-progress"
>
  <View
    colors={
      [
        "#F29B72",
        "#E95814",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomRightRadius": 0,
        "borderRadius": 4,
        "borderTopRightRadius": 0,
        "flex": 1000,
        "height": 8,
        "marginRight": 3,
      }
    }
    testID="progress-linear-gradient"
  />
  <View
    colors={
      [
        "#0F4199",
        "#013188",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 0,
        "borderRadius": 4,
        "borderTopLeftRadius": 0,
        "borderTopRightRadius": 0,
        "flex": 500,
        "height": 8,
        "marginRight": 3,
      }
    }
    testID="progress-linear-gradient"
  />
  <View
    colors={
      [
        "#028E39",
        "#17C55C",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 0,
        "borderRadius": 4,
        "borderTopLeftRadius": 0,
        "borderTopRightRadius": 0,
        "flex": 500,
        "height": 8,
        "marginRight": 3,
      }
    }
    testID="progress-linear-gradient"
  />
  <View
    colors={
      [
        "#F29B72",
        "#E95814",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomLeftRadius": 0,
        "borderRadius": 4,
        "borderTopLeftRadius": 0,
        "flex": 500,
        "height": 8,
      }
    }
    testID="progress-linear-gradient"
  />
</View>
`;

exports[`ProgressBar snapshots single progress 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F7F8",
      "borderColor": "#F7F7F8",
      "flexDirection": "row",
      "height": 12,
      "overflow": "hidden",
      "padding": 2,
    }
  }
  testID="container-multiple-progress"
>
  <View
    colors={
      [
        "#F29B72",
        "#E95814",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderRadius": 4,
        "flex": 1000,
        "height": 8,
      }
    }
    testID="progress-linear-gradient"
  />
</View>
`;

exports[`ProgressBar snapshots two progress 1`] = `
<View
  style={
    {
      "backgroundColor": "#F7F7F8",
      "borderColor": "#F7F7F8",
      "flexDirection": "row",
      "height": 12,
      "overflow": "hidden",
      "padding": 2,
    }
  }
  testID="container-multiple-progress"
>
  <View
    colors={
      [
        "#F29B72",
        "#E95814",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomRightRadius": 0,
        "borderRadius": 4,
        "borderTopRightRadius": 0,
        "flex": 1000,
        "height": 8,
        "marginRight": 3,
      }
    }
    testID="progress-linear-gradient"
  />
  <View
    colors={
      [
        "#0F4199",
        "#013188",
      ]
    }
    end={
      {
        "x": 1,
        "y": 0,
      }
    }
    start={
      {
        "x": 0,
        "y": 0,
      }
    }
    style={
      {
        "borderBottomLeftRadius": 0,
        "borderRadius": 4,
        "borderTopLeftRadius": 0,
        "flex": 500,
        "height": 8,
      }
    }
    testID="progress-linear-gradient"
  />
</View>
`;
